微信配置文件

--- a/config-center/src/main/resources/bootstrap.yml
+++ b/config-center/src/main/resources/bootstrap.yml
@@ -2,7 +2,7 @@ spring:
   application:
     name: config-center
   profiles:
-    active: native
+    active: git
 
 eureka:
   instance:
@@ -12,5 +12,5 @@ eureka:
       instanceId: ${spring.application.name}:${random.value}
   client:
     service-url:
-      #defaultZone: http://${eureka.host:localhost}:${eureka.port:8761}/eureka/
-      defaultZone: http://server1:8761/eureka/,http://server2:8761/eureka/,http://server3:8761/eureka/ #集群部署使用这个配置
+      defaultZone: http://${eureka.host:localhost}:${eureka.port:8761}/eureka/
+#      defaultZone: http://server1:8761/eureka/,http://server2:8761/eureka/,http://server3:8761/eureka/ #集群部署使用这个配置
