--- a/eureka-server/src/main/resources/application-server3.yml
+++ b/eureka-server/src/main/resources/application-server3.yml
@@ -8,9 +8,12 @@ spring:
 eureka:
   instance:
     #prefer-ip-address: true
-    hostname: server3
+    hostname: eureka-server3
   client:
     service-url:
-      defaultZone: http://server1:8761/eureka/,http://server2:8761/eureka/
+      defaultZone: http://eureka-server1:8761/eureka/,http://eureka-server2:8762/eureka/
   server:
     enable-self-preservation: false
+
+logging:
+  config: classpath:log4j2.xml
