不同环境配置文件分开

--- a/config-center/src/main/resources/application.yml
+++ b/config-center/src/main/resources/application.yml
@@ -1,13 +1,3 @@
 spring:
-  cloud:
-    config:
-      server:
-        git:
-          uri: https://github.com/wrpys/wrpys_workspaces
-          search-paths: config
-          username: 496732709@qq.com
-          password: wrp041527.
-server:
-  port: 8888
-logging:
-  config: classpath:log4j2.xml
+  profiles:
+    active: dev
