--- a/eureka-server/src/main/resources/application.yml
+++ b/eureka-server/src/main/resources/application.yml
@@ -1,6 +1,7 @@
 spring:
   profiles:
     active: dev
+#--spring.profiles.active=server1、server2、server3
 
 logging:
   config: classpath:log4j2.xml
