--- a/config/weixin.yml
+++ b/config/weixin.yml
@@ -1,2 +1,7 @@
 logging:
   config: classpath:log4j2.xml
+
+mybatis:
+  mapper-locations: classpath:com/wrpys/app/wx/model/mapper/*.xml
+pagehelper:
+  helper-dialect: mysql
