--- a/config/wrpys-ui.yml
+++ b/config/wrpys-ui.yml
@@ -4,6 +4,9 @@ spring:
       prefix: /view/
       suffix: .jsp
 
+logging:
+  config: classpath:log4j2.xml
+
 mybatis:
   mapper-locations: classpath:com/wrpys/app/ui/model/mapper/*.xml
 pagehelper:
