--- a/pom/pom.xml
+++ b/pom/pom.xml
@@ -83,6 +83,8 @@
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
         <java.version>1.8</java.version>
 
+        <wrpys.version>1.0.0-SNAPSHOT</wrpys.version>
+
         <mybatis-spring-boot-starter.version>1.3.0</mybatis-spring-boot-starter.version>
         <pagehelper-spring-boot-starter.version>1.1.1</pagehelper-spring-boot-starter.version>
         <spring-boot-starter-log4j2.version>1.5.8.RELEASE</spring-boot-starter-log4j2.version>
