--- a/config/wrpys-ui-dev.yml
+++ b/config/wrpys-ui-dev.yml
@@ -6,7 +6,7 @@ server:
 
 spring:
   datasource:
-    url: jdbc:mysql://127.0.0.1:3306/wrpysui_dev
+    url: jdbc:mysql://127.0.0.1:3306/wrpys_dev
     username: root
     password: 123456
     driver-class-name: com.mysql.jdbc.Driver
