--- a/eureka-server/src/main/resources/application-server2.yml
+++ b/eureka-server/src/main/resources/application-server2.yml
@@ -1,5 +1,5 @@
 server:
-  port: 8761
+  port: 8762
 
 spring:
   application:
@@ -8,10 +8,10 @@ spring:
 eureka:
   instance:
     #prefer-ip-address: true
-    hostname: eureka-server2
+    hostname: server2
   client:
     service-url:
-      defaultZone: http://eureka-server1:8761/eureka/,http://eureka-server3:8763/eureka/
+      defaultZone: http://server1:8761/eureka/,http://server3:8763/eureka/
   server:
     enable-self-preservation: false
 
